<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Licensed to the Light Team Software (Light Team) under one or more
  ~ contributor license agreements.  See the NOTICE file distributed with
  ~ this work for additional information regarding copyright ownership.
  ~ The Light Team licenses this file to You under the Apache License, Version 2.0
  ~ (the "License"); you may not use this file except in compliance with
  ~ the License.  You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_category_font">

        <ListPreference
            android:title="@string/pref_font_size_title"
            android:summary="@string/pref_font_size_summary"
            android:key="FONT_SIZE_1"
            android:entries="@array/text_size"
            android:entryValues="@array/text_size"
            android:defaultValue="14"/>

        <ListPreference
            android:title="@string/pref_font_type_title"
            android:summary="%s"
            android:key="FONT_TYPE"
            android:entries="@array/font_types"
            android:entryValues="@array/font_types_values"
            android:defaultValue="droid_sans_mono"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_tabs">

        <SwitchPreference
            android:title="@string/pref_resume_session_title"
            android:summary="@string/pref_resume_session_summary"
            android:key="RESUME_SESSION"
            android:defaultValue="true"/>

        <ListPreference
            android:title="@string/pref_max_page_title"
            android:summary="@string/pref_max_page_summary"
            android:key="MAX_TABS_COUNT_1"
            android:entries="@array/max_tabs"
            android:entryValues="@array/max_tabs"
            android:defaultValue="5"/>

        <SwitchPreference
            android:title="@string/pref_disable_swipe_title"
            android:summary="@string/pref_disable_swipe_summary"
            android:key="DISABLE_SWIPE"
            android:defaultValue="false"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_editor">

        <SwitchPreference
            android:title="@string/pref_word_wrap_title"
            android:summary="@string/pref_word_wrap_summary"
            android:defaultValue="true"
            android:key="WRAP_CONTENT"/>

        <SwitchPreference
            android:title="@string/pref_code_completion_title"
            android:summary="@string/pref_code_completion_summary"
            android:defaultValue="true"
            android:key="CODE_COMPLETION"/>

        <SwitchPreference
            android:title="@string/pref_pinch_zoom_title"
            android:summary="@string/pref_pinch_zoom_summary"
            android:defaultValue="true"
            android:key="PINCH_ZOOM"/>

        <SwitchPreference
            android:title="@string/pref_line_numbers_title"
            android:summary="@string/pref_line_numbers_summary"
            android:defaultValue="true"
            android:key="SHOW_LINE_NUMBERS"/>

        <SwitchPreference
            android:title="@string/pref_highlight_line_title"
            android:defaultValue="true"
            android:key="HIGHLIGHT_CURRENT_LINE"/>

        <SwitchPreference
            android:title="@string/pref_bracket_matching_title"
            android:defaultValue="true"
            android:key="BRACKET_MATCHING"/>

        <SwitchPreference
            android:title="@string/pref_syntax_highlight_title"
            android:defaultValue="true"
            android:key="SYNTAX_HIGHLIGHT"/>

        <SwitchPreference
            android:title="@string/pref_read_only_title"
            android:defaultValue="false"
            android:key="READ_ONLY"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_keyboard">

        <SwitchPreference
            android:title="@string/pref_extended_keyboard_title"
            android:summary="@string/pref_extended_keyboard_summary"
            android:defaultValue="true"
            android:key="USE_EXTENDED_KEYS"/>

        <SwitchPreference
            android:title="@string/pref_ime_keyboard_title"
            android:summary="@string/pref_ime_keyboard_summary"
            android:defaultValue="false"
            android:key="USE_IME_KEYBOARD"/>

    </PreferenceCategory>

</PreferenceScreen>