<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2018 Light Team Software
  ~
  ~ This file is part of ModPE IDE.
  ~
  ~ ModPE IDE is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ ModPE IDE is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see
  ~ <http://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_category_about">

        <Preference
            android:icon="@mipmap/ic_launcher"
            android:title="@string/pref_about_title"
            android:summary="@string/pref_about_summary"
            android:key="ABOUT_AND_CHANGELOG"/>

        <Preference
            android:title="@string/pref_privacy_policy_title"
            android:key="PRIVACY_POLICY"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_libraries">

        <Preference
            android:title="@string/pref_lib_butterKnife_title"
            android:summary="@string/pref_lib_butterKnife_summary">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/JakeWharton/butterknife"/>
        </Preference>

        <Preference
            android:title="@string/pref_lib_dagger2_title"
            android:summary="@string/pref_lib_dagger2_summary">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/google/dagger"/>
        </Preference>

        <Preference
            android:title="@string/pref_lib_keyboardVE_title"
            android:summary="@string/pref_lib_keyboardVE_summary">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/yshrsmz/KeyboardVisibilityEvent"/>
        </Preference>

        <Preference
            android:title="@string/pref_lib_material_dialogs_title"
            android:summary="@string/pref_lib_material_dialogs_summary">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/afollestad/material-dialogs"/>
        </Preference>

        <Preference
            android:title="@string/pref_lib_room_title"
            android:summary="@string/pref_lib_room_summary">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://developer.android.com/topic/libraries/architecture/room"/>
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>