<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2018 Light Team Software
  ~
  ~ This file is part of ModPE IDE.
  ~
  ~ ModPE IDE is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ ModPE IDE is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see
  ~ <http://www.gnu.org/licenses/>.
  -->

<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <header
        android:title="@string/pref_header_application_title"
        android:summary="@string/pref_header_application_summary"
        android:fragment="com.KillerBLS.modpeide.fragment.FragmentPreference">
        <extra android:name="settings" android:value="application"/>
    </header>

    <header
        android:title="@string/pref_header_editor_title"
        android:summary="@string/pref_header_editor_summary"
        android:fragment="com.KillerBLS.modpeide.fragment.FragmentPreference">
        <extra android:name="settings" android:value="editor"/>
    </header>

    <header
        android:title="@string/pref_header_codeStyle_title"
        android:summary="@string/pref_header_codeStyle_summary"
        android:fragment="com.KillerBLS.modpeide.fragment.FragmentPreference">
        <extra android:name="settings" android:value="codestyle"/>
    </header>

    <header
        android:title="@string/pref_header_files_title"
        android:summary="@string/pref_header_files_summary"
        android:fragment="com.KillerBLS.modpeide.fragment.FragmentPreference">
        <extra android:name="settings" android:value="files"/>
    </header>

    <header
        android:title="@string/pref_header_about_title"
        android:summary="@string/pref_header_about_summary"
        android:fragment="com.KillerBLS.modpeide.fragment.FragmentPreference">
        <extra android:name="settings" android:value="about"/>
    </header>

</preference-headers>