<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2018 Light Team Software
  ~
  ~ This file is part of ModPE IDE.
  ~
  ~ ModPE IDE is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ ModPE IDE is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see
  ~ <http://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_category_code_style">

        <SwitchPreference
            android:title="@string/pref_auto_indent_title"
            android:summary="@string/pref_auto_indent_summary"
            android:defaultValue="true"
            android:key="INDENT_LINE"/>

        <SwitchPreference
            android:title="@string/pref_close_brackets_title"
            android:summary="@string/pref_close_brackets_summary"
            android:defaultValue="true"
            android:key="INSERT_BRACKET"/>

        <SwitchPreference
            android:title="@string/pref_close_quotes_title"
            android:summary="@string/pref_close_quotes_summary"
            android:defaultValue="false"
            android:key="INSERT_QUOTE"/>

    </PreferenceCategory>

</PreferenceScreen>