<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Licensed to the Light Team Software (Light Team) under one or more
  ~ contributor license agreements.  See the NOTICE file distributed with
  ~ this work for additional information regarding copyright ownership.
  ~ The Light Team licenses this file to You under the Apache License, Version 2.0
  ~ (the "License"); you may not use this file except in compliance with
  ~ the License.  You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_edit_cut"
        android:icon="@drawable/ic_cut"
        android:title="@string/menu_edit_cut"
        app:iconTint="@color/colorIcon"/>
    <item
        android:id="@+id/menu_edit_copy"
        android:icon="@drawable/ic_copy"
        android:title="@string/menu_edit_copy"
        app:iconTint="@color/colorIcon"/>
    <item
        android:id="@+id/menu_edit_paste"
        android:icon="@drawable/ic_paste"
        android:title="@string/menu_edit_paste"
        app:iconTint="@color/colorIcon"/>
    <item
        android:id="@+id/menu_edit_selectAll"
        android:icon="@drawable/ic_select_all"
        android:title="@string/menu_edit_selectAll"
        app:iconTint="@color/colorIcon"/>
    <item
        android:id="@+id/menu_edit_selectLine"
        android:icon="@drawable/ic_line_select"
        android:title="@string/menu_edit_selectLine"
        app:iconTint="@color/colorIcon"/>
    <item
        android:id="@+id/menu_edit_deleteLine"
        android:icon="@drawable/ic_minus"
        android:title="@string/menu_edit_deleteLine"
        app:iconTint="@color/colorIcon"/>
    <item
        android:id="@+id/menu_edit_duplicateLine"
        android:icon="@drawable/ic_line_duplicate"
        android:title="@string/menu_edit_duplicateLine"
        app:iconTint="@color/colorIcon"/>
</menu>