<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2018 Light Team Software
  ~
  ~ This file is part of ModPE IDE.
  ~
  ~ ModPE IDE is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ ModPE IDE is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see
  ~ <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_file_new"
        android:icon="@drawable/ic_plus"
        android:title="@string/menu_file_new"
        app:iconTint="@color/colorIcon"/>
    <item
        android:id="@+id/menu_file_open"
        android:icon="@drawable/ic_folder_open"
        android:title="@string/menu_file_open"
        app:iconTint="@color/colorIcon"/>
    <item
        android:id="@+id/menu_file_save"
        android:icon="@drawable/ic_save"
        android:title="@string/menu_file_save"
        app:iconTint="@color/colorIcon"/>
    <item
        android:id="@+id/menu_file_properties"
        android:icon="@drawable/ic_file_properties"
        android:title="@string/menu_file_properties"
        app:iconTint="@color/colorIcon"/>
    <item
        android:id="@+id/menu_file_close"
        android:icon="@drawable/ic_close"
        android:title="@string/menu_file_close"
        app:iconTint="@color/colorIcon"/>
</menu>