<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Licensed to the Light Team Software (Light Team) under one or more
  ~ contributor license agreements.  See the NOTICE file distributed with
  ~ this work for additional information regarding copyright ownership.
  ~ The Light Team licenses this file to You under the Apache License, Version 2.0
  ~ (the "License"); you may not use this file except in compliance with
  ~ the License.  You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="@string/action_refactor"
        android:icon="@drawable/ic_edit"
        app:iconTint="@color/colorIcon">
        <menu>
            <item
                android:title="@string/action_rename"
                android:id="@+id/action_rename"
                android:icon="@drawable/ic_file_rename"
                app:iconTint="@color/colorIcon"/>
            <item
                android:title="@string/action_delete"
                android:id="@+id/action_delete"
                android:icon="@drawable/ic_delete"
                app:iconTint="@color/colorIcon"/>
        </menu>
    </item>
    <item
        android:title="@string/menu_file_properties"
        android:id="@+id/action_properties"
        android:icon="@drawable/ic_file_properties"
        app:iconTint="@color/colorIcon"/>
    <item
        android:title="@string/action_copy_path"
        android:id="@+id/action_copy_path"
        android:icon="@drawable/ic_copy"
        app:iconTint="@color/colorIcon"/>
</menu>